[project]
name = "imageindexer"
version = "1.0.0"
description = "Image indexing tool with LLM support"
requires-python = ">=3.10, <3.14"
dependencies = [
    "pyqt6",
    "json-repair",
    "pyexiftool",
    "pillow",
    "pillow-heif",
    "rawpy",
    "regex",
    "requests",
]

[dependency-groups]
dev = []
